Finished script for swing end

--- a/Python/data_analysis.ipynb
+++ b/Python/data_analysis.ipynb
@@ -1377,7 +1377,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 619,
+   "execution_count": 630,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1438,16 +1438,35 @@
     "            print(\"Nice follow through!\")\n",
     "    \n",
     "    if prediction == \"VOL\":\n",
-    "        pass\n"
+    "        success = True\n",
+    "        if tup[2] > 0: # Checks height of controller vs. height of headset\n",
+    "            print(\"Try to keep your hand below your head in a volley!!\")\n",
+    "            success = False\n",
+    "        if tup[1] < 0: # Checks \"forward depth\" of controller vs. headset\n",
+    "            print(\"Try to end your volley in front of your body!\")\n",
+    "            success = False\n",
+    "        #if tup[0] < 0: # Checks left/right position of contrller vs. headset\n",
+    "        #    print(\"Make sure to finish on the right side of your body!\")\n",
+    "        #    success = False\n",
+    "        if success:\n",
+    "            print(\"Nice shot!\")\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 625,
+   "execution_count": 677,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Make sure to finish on the right side of your body!\n"
+     ]
+    }
+   ],
    "source": [
-    "filepath = \"../Data/Combined/VOL_85.csv\"\n",
+    "filepath = \"../Data/Combined/VOL_05.csv\"\n",
     "data = pd.read_csv(filepath, index_col=False)\n",
     "prediction = simple_stat_classifier_2(filepath)\n",
     "start, end = get_start_end_after_classification(data, prediction)\n",
@@ -1457,14 +1476,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 618,
+   "execution_count": 678,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(0.03156389999999998, -0.5526802, -0.46449619999999997)\n"
+      "(-0.20295658, 0.4413993999999999, -0.6343442)\n"
      ]
     }
    ],
@@ -1490,6 +1509,56 @@
    ],
    "source": [
     "max(data[\"controller_right_pos.y\"] - data[\"headset_pos.y\"])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 639,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "264.812"
+      ]
+     },
+     "execution_count": 639,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data['controller_right_rot.z'][end]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 682,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.23512002681712346 -0.7809663925304932 -0.57862774451924\n"
+     ]
+    }
+   ],
+   "source": [
+    "filepath = \"../Data/Combined/VOL_40.csv\"\n",
+    "data = pd.read_csv(filepath, index_col=False)\n",
+    "prediction = simple_stat_classifier_2(filepath)\n",
+    "start, end = get_start_end_after_classification(data, prediction)\n",
+    "\n",
+    "y = data['controller_right_rot.y'][end] * math.pi / 180\n",
+    "p = data['controller_right_rot.x'][end] * math.pi / 180\n",
+    "r = data['controller_right_rot.z'][end] * math.pi / 180\n",
+    "\n",
+    "vx = - np.cos(y) * np.sin(p) * np.sin(r) - np.sin(y) * np.cos(r) \n",
+    "vy =  - np.sin(y) * np.sin(p) * np.sin(r) + np.cos(y) * np.cos(r)\n",
+    "vz = np.cos(p) * np.sin(r)\n",
+    "\n",
+    "print(vx, vy, vz)"
    ]
   }
  ],
