--- a/Python/data_analysis.ipynb
+++ b/Python/data_analysis.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 456,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 268,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 269,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 270,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 271,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -59,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 272,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -68,7 +68,7 @@
        "(10.075528058846395, 103)"
       ]
      },
-     "execution_count": 272,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -79,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 273,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -114,7 +114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 274,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -145,7 +145,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 275,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -154,7 +154,7 @@
        "'BHD'"
       ]
      },
-     "execution_count": 275,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -184,7 +184,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 276,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -218,7 +218,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 277,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -268,7 +268,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 278,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -287,7 +287,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 279,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -296,7 +296,7 @@
        "-0.40462167"
       ]
      },
-     "execution_count": 279,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -308,7 +308,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 280,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -317,7 +317,7 @@
        "0.015195051647058843"
       ]
      },
-     "execution_count": 280,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -328,7 +328,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 281,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -337,7 +337,7 @@
        "0.9805555555555555"
       ]
      },
-     "execution_count": 281,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -348,7 +348,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 284,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -357,7 +357,7 @@
        "0.9944444444444445"
       ]
      },
-     "execution_count": 284,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -368,7 +368,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 416,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -456,7 +456,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 337,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -482,7 +482,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -522,7 +522,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 333,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -731,9 +731,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (3165665707.py, line 1)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  Input \u001b[0;32mIn [22]\u001b[0;36m\u001b[0m\n\u001b[0;31m    x = -cos(yaw)sin(pitch)sin(roll)-sin(yaw)cos(roll) +\u001b[0m\n\u001b[0m                 ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+     ]
+    }
+   ],
    "source": [
     "x = -cos(yaw)sin(pitch)sin(roll)-sin(yaw)cos(roll) + \n",
     "y = -sin(yaw)sin(pitch)sin(roll)+cos(yaw)cos(roll)\n",
@@ -742,7 +751,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 335,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -751,7 +760,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 391,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -823,7 +832,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 360,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -851,7 +860,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 341,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -862,7 +871,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 368,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -873,7 +882,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 374,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1083,7 +1092,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 390,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1146,7 +1155,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 388,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1163,7 +1172,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 393,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1225,7 +1234,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 430,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1244,7 +1253,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 432,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1263,39 +1272,63 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 499,
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "188.01160693879652\n"
+      "325.46474263753055\n"
      ]
     }
    ],
    "source": [
-    "filepath = \"../Data/Combined/BHD_85.csv\"\n",
+    "filepath = \"../Data/Combined/FHD_52.csv\"\n",
     "data = pd.read_csv(filepath, index_col=False)\n",
     "prediction = simple_stat_classifier_2(filepath)\n",
     "start, end = get_start_end_after_classification(data, prediction)\n",
     "\n",
     "res = 0\n",
     "for i in range(start, end-2):\n",
-    "    vec1 = (data['controller_right_pos.x'][i] - data['headset_pos.x'][i], data['controller_right_pos.z'][i] - data['headset_pos.z'][i])\n",
-    "    vec2 = (data['controller_right_pos.x'][i+1] - data['headset_pos.x'][i+1], data['controller_right_pos.z'][i+1] - data['headset_pos.z'][i+1])\n",
+    "    #vec1 = (data['controller_right_pos.x'][i] - data['headset_pos.x'][i], data['controller_right_pos.z'][i] - data['headset_pos.z'][i], 0)\n",
+    "    #vec2 = (data['controller_right_pos.x'][i+1] - data['headset_pos.x'][i+1], data['controller_right_pos.z'][i+1] - data['headset_pos.z'][i+1], 0)\n",
+    "\n",
+    "    vec1 = (data['controller_right_pos.x'][i] - data['headset_pos.x'][start], data['controller_right_pos.z'][i] - data['headset_pos.z'][start], 0)\n",
+    "    vec2 = (data['controller_right_pos.x'][i+1] - data['headset_pos.x'][start], data['controller_right_pos.z'][i+1] - data['headset_pos.z'][start], 0)\n",
     "\n",
     "    dot = vec1[0] * vec2[0] + vec1[1] * vec2[1]\n",
     "    mag1 = (vec1[0] ** 2 + vec1[1] ** 2) ** 0.5\n",
     "    mag2 = (vec2[0] ** 2 + vec2[1] ** 2) ** 0.5\n",
-    "    res += math.acos(dot/mag1/mag2)\n",
+    "\n",
+    "    if prediction == \"FHD\":\n",
+    "        if np.cross(vec1, vec2)[2] > 0:\n",
+    "            res += math.acos(dot/mag1/mag2)\n",
+    "    elif prediction == \"BHD\":\n",
+    "        if np.cross(vec1, vec2)[2] < 0:\n",
+    "            res += math.acos(dot/mag1/mag2)\n",
+    "    else:\n",
+    "        res += math.acos(dot/mag1/mag2)\n",
+    "\n",
+    "    # X.Y = |x||y|cos(angle)\n",
+    "    # angle = arccos[(X.Y)/(|x||y|)]\n",
+    "    #print(np.cross(vec1, vec2))\n",
     "\n",
     "print(res * 180 / math.pi)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 501,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1314,7 +1347,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 581,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1337,7 +1370,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 572,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1357,7 +1390,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 573,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1377,7 +1410,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 630,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1454,7 +1487,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 677,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1476,7 +1509,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 678,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1493,7 +1526,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 621,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1513,7 +1546,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 639,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1533,7 +1566,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 683,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
